Changes in @NEW@:
  o Client Changes:
    * repositoryMap conaryrc entries can now use wildcards for the server name
    * Multiple entitlements can be sent to each server now
    * Server names in entitlements may include wildcads.
    * Entitlements may be placed in conaryrc files now using
      'entitlement server entitlement'. conary config displays entitlement
      information.

  o Build Changes:
    * Refreshed autosource files are now displayed by 'cvc revert' and 
      'cvc diff' (CNY-1647)

  o Server Changes:
    * (Nearly) all repository operations are now performed using the
      permissions of the anonymous user in addition to the permission set
      for any user authentication information which is present.
    * Path names in the entitlementsDirectory no longer have any meaning. All
      entitlements are read, and the serverName in the XML for the entitlement
      is used to determine which server to send the entitlement too.
    * Entitlement classes are no longer used as part of authentication; they
      may still be specified, but repositorys now look up the class(es) for an
      entitlement based on the key.

  o Bug Fixes:
    * 'conary rblist' no longer produces a stack trace if the
      installLabelPath configuration option is not set. (CNY-1731)
    * A bug that caused an "Error parsing label" error message when
      invoking "cvc commit" on a group recipe that used
      r.setSearchPath(str(r.labelPath[0]), ...) has been
      fixed. (CNY-1740)
    * Proxy errors are now reported in the client, for easier
      debugging.  (CNY-1313)
    * A bug that caused an "Unknown error downloading changeset" error
      when applying an update job that contained two different
      versions of the same trove has been fixed. (CNY-1742)
    * Adding redirects which pointed to otherwise-unused branches corrupted
      the database by creating a branch without corresponding label information